# var_n7k_szakd

./: README.md  package.xml  setup.cfg  setup.py
launch/: all_in_one.launch.py  launch_gazebo.launch.py  launch_navigation.launch.py  launch_rviz.launch.py  launch_slam_mapping.launch.py  roboworks_sim.launch.py  wheeltec_sim.launch.py
resource/: var_n7k_szakd
robot_description/: wheeltec.sdf  wheeltec.urdf
robot_description/roboworks/: model.sdf  model.urdf
rviz/: parkbot_example.rviz  roboworks_lidar.rviz
scripts/: sdf_to_urdf.py
world/: roboworks_world.sdf  wheeltec_world.sdf
